[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sx1262-driver"
version = "0.1.0"
description = "Event-driven SX1262 LoRa driver for Raspberry Pi using lgpio"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Gregg A. Lebovitz" }
]
requires-python = ">=3.8"

dependencies = [
  "lgpio",
  "spidev",
]

[project.urls]
Homepage = "https://github.com/yourname/sx1262-driver"
